--- a/singleton-scoped-transient/Properties/launchSettings.json
+++ b/singleton-scoped-transient/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "singleton_scoped_transient": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5092",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
